# PLACER

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  benchmark.md  build.ps1  build.sh  clean.md  ins_fragment_hits.tsv  ins_fragments.fasta  plan.md  requirements.txt  scientific.txt  scientific.vcf
.github/workflows/: ci.yml
build-local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  placer
build-local/Testing/Temporary/: CTestCostData.txt
build-local/src/abpoa_wrapper/: Makefile  cmake_install.cmake
build-local/src/assembly/: Makefile  cmake_install.cmake
build-local/src/component/: Makefile  cmake_install.cmake
build-local/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_assembly  test_component  test_genotyping  test_local_realign  test_placeability  test_placeability_integration  test_stream  test_te_reverse_index
build-warn/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-warn/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: BAM_IO.md  algo.md  component.md  dev_plan_log.md  simulation.md  te_consensus.md
include/: abpoa_wrapper.h  assembly.h  bam_io.h  bam_reader.h  component_builder.h  conformal_selector.h  contig_alias.h  decision_policy.h  decision_thresholds.h  denovo.h  event_explanation.h  gate1.h  gate1_filter.h  gate1_module.h  genotyping.h  local_realign.h  mechanistic_evidence.h  minimizer.h  null_control.h  pipeline.h  placeability.h  stream_processor.h  task_queue.h  te_alignment_qc.h  te_kmer_index.h  te_reverse_index.h  te_sequence_explainer.h  trigger.h  window_buffer.h  window_stats.h
placer_py/: __init__.py  cli.py  io.py  models.py
placer_py/candidates/: __init__.py  sniffles_vcf.py
placer_py/evidence/: __init__.py  bam_local.py  reference_boundary.py  segmental_explanation.py  sequence.py  te_alignment.py
placer_py/model/: __init__.py  mechanistic.py  placer_discriminator.py  te_explainer.py
scripts/: analyze_steller_missed_calls.py  assemble_d2_flye.sh  benchmark_callers.py  benchmark_placer_vs_truth.py  benchmark_sim_truth.py  benchmark_steller_dataset.sh  benchmark_stress_subsets.sh  benchmark_tldr_vs_placer.py  blast_insert_sequence.py  bootstrap_te_reclassify.sh  build.py  build_latest_placer.sh  calibrate_mechanistic_vs_tldr.py  calibrate_target_q_vs_tldr.py  check_release_readiness.py  finalize_sharded_scientific.py  graffite_truthset.sh  graffite_vcf_to_truth.py  plot_caller_benchmark.py  poly_n_distribution.py  random_truth_interval_eval.py  rebuild_igv_validation_bams.py  repo_audit.sh  run_placer.sh  run_placer_ciclid.sh  run_placer_latest.sh  run_sharded_placer.py  simulate_te_insertions.py  simulate_te_truthset.slurm  submit_cichlid_yohann_d23.sh  submit_placer_urika_d23.slurm  sweep_steller_params.sh  tune_sim_benchmark.sh  vcf_to_ins_calls.py
src/: main.cpp
src/abpoa_wrapper/: CMakeLists.txt  abpoa_wrapper.cpp
src/assembly/: CMakeLists.txt  assembly.cpp
src/component/: CMakeLists.txt  component_builder.cpp  dbscan_component_module.cpp  insert_fragment_module.cpp  te_consensus_module.cpp  te_family_alignment.cpp  te_family_alignment.h  te_quick_classifier.cpp  te_sequence_explainer.cpp  tsd_detector.cpp
src/denovo/: denovo_cli.cpp  indexed_bam_reader.cpp  parent_pool_scanner.cpp
src/gate1/: CMakeLists.txt  gate1.cpp  gate1_filter.cpp  gate1_module.cpp
src/genotyping/: CMakeLists.txt  genotyping.cpp
src/local_realign/: CMakeLists.txt  local_realign.cpp
src/pipeline/: conformal_selector.cpp  decision_policy.cpp  event_explanation.cpp  local_interval_cache.cpp  local_interval_cache.h  mechanistic_evidence.cpp  null_control.cpp  parallel_executor.cpp  parallel_executor_internal.h  pipeline.cpp  pipeline_bin_processing_stage.inc  pipeline_breakpoint_helpers.inc  pipeline_breakpoint_stage.inc  pipeline_call_selection.inc  pipeline_consensus_stage.inc  pipeline_entrypoints.inc  pipeline_event_evidence_stage.inc  pipeline_event_helpers.inc  pipeline_factory.inc  pipeline_finalization_stage.inc  pipeline_hypothesis_emission_stage.inc  pipeline_local_alignment_helpers.inc  pipeline_segmentation_stage.inc  pipeline_window_helpers.inc
src/placeability/: CMakeLists.txt  placeability.cpp
src/stream/: CMakeLists.txt  bam_io.cpp  bam_reader.cpp  stream_processor.cpp  task_queue.cpp  trigger.cpp  window_buffer.cpp
src/te_reverse_index/: CMakeLists.txt  te_reverse_index.cpp
test_data/sim_te_benchmark/: README.md  benchmark_compare_sandbox.sh  eval_matches.tsv  generate_sim_te_benchmark.py  read_manifest.tsv  sim_te_benchmark.bam  sim_te_benchmark.bam.bai  te.fa  te_consensus_dfam.fa  te_tldr.fa  tldr_sim_min100.table.txt  tmp.07eb3b4f-2e6b-4d70-a968-d01bcc38e792.tgt.fa  truth_events.tsv  truth_negative_fp.tsv  truth_positive_all.tsv  truth_positive_strong.tsv
tests/: CMakeLists.txt  bench_te_library_alignment.cpp  test_anchor_seed_bins.cpp  test_assembly.cpp  test_bam_io_region_stream.cpp  test_bayesian_sv_genotyping.cpp  test_blast_insert_sequence.py  test_blast_te_alignment.cpp  test_breakpoint_hypothesis_enumeration.cpp  test_build_script.py  test_cigar_insertion_fragment_local_retention.cpp  test_cluster_scripts.py  test_component.cpp  test_component_locality.cpp  test_component_multi_emit_selection.cpp  test_component_signal_cache.cpp  test_conformal_finalization.cpp  test_conformal_selector.cpp  test_dbscan_component_module.cpp  test_decision_policy.cpp  test_denovo_cli.cpp  test_event_explanation.cpp  test_event_read_evidence.cpp  test_event_segmentation.cpp  test_gate1.cpp  test_genotyping.cpp  test_hypothesis_pruning.cpp  test_insert_te_alignment.cpp  test_joint_te_emission_alt_only.cpp  test_local_realign.cpp  test_local_recollection_fragment_refresh.cpp  test_mechanistic_evidence.cpp  test_no_softclip_rescue.cpp  test_null_control.cpp  test_owner_bin_component_context.cpp  test_parallel_bounded_scheduler.cpp  test_parallel_exact_bin_task_equivalence.cpp  test_parallel_execution_equivalence.cpp  test_parallel_local_interval_cache.cpp  test_path_utils.h  (+35 more)
(+32 files in other folders)
